--- a/app/views/activities/_m_entertainment.html.erb
+++ b/app/views/activities/_m_entertainment.html.erb
@@ -10,7 +10,7 @@
 
       <div class="name"><%= link_to activity.title, activity_path(activity) %></div>
       Детям <%= activity.age %> лет<br />
-      Учреждение: <%= activity.organization.title %>
+      Учреждение: <%= link_to activity.organization.title, activity.organization %>
       <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
     </div>
   </div>
