--- a/app/assets/stylesheets/council_slider.css
+++ b/app/assets/stylesheets/council_slider.css
@@ -1,5 +1,6 @@
 #slide1:checked ~ #slides .inner { margin-left:0; }
 #slide2:checked ~ #slides .inner { margin-left:-100%; }
+/*
 #slide3:checked ~ #slides .inner { margin-left:-200%; }
 #slide4:checked ~ #slides .inner { margin-left:-300%; }
 #slide5:checked ~ #slides .inner { margin-left:-400%; }
@@ -8,7 +9,7 @@
 #slide8:checked ~ #slides .inner { margin-left:-700%; }
 #slide9:checked ~ #slides .inner { margin-left:-800%; }
 #slide10:checked ~ #slides .inner { margin-left:-900%; }
- 
+*/
 #slides { padding:15px 0 20px}
 
 #overflow {
@@ -27,11 +28,11 @@ article a.thumb { position:relative; overflow:hidden; -moz-border-radius:0 0 40p
 article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 
 #slides .inner {
-        width: 1000%;
+        width: 200%;
 }
 
 #slides article {
-        width: 10%;
+        width: 50%;
         float: left;
         text-align:center;
         padding-bottom:10px
@@ -82,7 +83,7 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 }
 
 #slide1:checked ~ #controls label:nth-child(2), 
-#slide2:checked ~ #controls label:nth-child(3), 
+#slide2:checked ~ #controls label:nth-child(1)/*, 
 #slide3:checked ~ #controls label:nth-child(4), 
 #slide4:checked ~ #controls label:nth-child(5), 
 #slide5:checked ~ #controls label:nth-child(6), 
@@ -90,16 +91,16 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 #slide7:checked ~ #controls label:nth-child(8), 
 #slide8:checked ~ #controls label:nth-child(9), 
 #slide9:checked ~ #controls label:nth-child(10), 
-#slide10:checked ~ #controls label:nth-child(1) {
+#slide10:checked ~ #controls label:nth-child(1)*/ {
         background: url(/assets/small_arrow_right.png) no-repeat;
         float: right;
         margin: 100px 20px 0 0;
-        display: none; cursor:pointer
+        display: block; cursor:pointer
 }
 
 
 #slide1:checked ~ #controls label:nth-child(10),
-#slide2:checked ~ #controls label:nth-child(1),
+#slide2:checked ~ #controls label:nth-child(9)/*,
 #slide3:checked ~ #controls label:nth-child(2),
 #slide4:checked ~ #controls label:nth-child(3),
 #slide5:checked ~ #controls label:nth-child(4),
@@ -107,11 +108,11 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 #slide7:checked ~ #controls label:nth-child(6),
 #slide8:checked ~ #controls label:nth-child(7),
 #slide9:checked ~ #controls label:nth-child(8),
-#slide10:checked ~ #controls label:nth-child(9) {
+#slide10:checked ~ #controls label:nth-child(9)*/ {
         background: url(/assets/small_arrow_left.png) no-repeat;
         float: left;
         margin: 100px 0 0 20px;
-        display: none; cursor:pointer
+        display: block; cursor:pointer
 }
 
 #slide1:checked ~ #active label:nth-child(1),
