--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -164,7 +164,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .main_content .bank_info  .order_bank_catd { background:url(../assets/samp/cards.jpg) no-repeat; padding-top:180px; float:left; width:180px; font-size:11px; text-align:center}
 .main_content .bank_info .bank_text { color:#525252; font-size:12px; float:left; width:220px; text-align:left; margin-left:10px; background:url(../assets/samp/signature.jpg) no-repeat right 130px;}
 
-.main_content .adv { float:right; margin-left:3%; height:250px; width:213px; border:1px solid #ccc; text-align:center; padding-top:100px}
+.main_content .adv { float:right; margin-left:3%; height:250px; width:213px; border:1px solid #bb224c; text-align:center; padding-top:100px}
 
 .main_content .bank_info .to_bank_link { margin-top:23px; background:#fff; border:3px solid #bb224c; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; behavior: url(border-radius.htc); text-decoration:none; font-weight:bold; color:#bb224c; padding:1px 5px; display:inline-block}
 
@@ -815,7 +815,7 @@ qoute-class { color:#000000; font-family:Futura; font-size:20px; display:block; 
 #footer a { color:#fff;}
 #footer .footer_header { height:60px; background:url(/assets/footer_top.png) no-repeat center top; min-width:960px}
 #footer .footer_content { background:url(/assets/footer_bg.png) }
-#footer .footer_shadow { background:url(/assets/footer_shadow.png) repeat-x bottom; padding: 15px 0 30px 0;}
+#footer .footer_shadow { background:url(/assets/footer_shadow.png) repeat-x bottom; padding: 0 0 5px 0;}
 
 #footer .column { width:250px; float:left; text-align:center}
 #footer .column.right { float:right}
