--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,8 +14,9 @@
       <div class="center column">
         <div class="menu">
           <ul>
-            <li><%= link_to 'Москва для детей', activities_path %></li>
-            <li><%= link_to 'Журнал', articles_path %></li>
+            <li><%= link_to 'Кружки и студии', activities_path %></li>
+            <li><%= link_to 'Яркий журнал', articles_path %></li>
+            <li><%= link_to 'Фестиваль', page_path('org_komitet') %></li>
             <li><%= link_to 'Конкурсы', contests_path %></li>
             <li><%= link_to 'Экспертный совет', experts_path %></li>
             <li><%= link_to 'Спецпроекты', special_projects_path %></li>
