--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Кружки и Студии | <%= @activity.title %>
+<% end %>
+
 <%= render 'activities/approve_dialog', activity: @activity %>
 
 <div class="pages">
