--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Яркий Журнал | <%= @article.title %>
+<% end %>
 <div class="pages">
   <div class="common">
     <h1><%= @article.title %></h1>
