--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Конкурсы | <%= @contest.name %>
+<% end %>
+
 <div class="pages">
   <div class="common">
     <h1><%= @contest.name %></h1>
