--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Экспертный Совет | <%= @expert.name %>
+<% end %>
 <div class="pages">
   
   <div class="expert_nav">
