metro icons commented

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -49,7 +49,7 @@
 	    <% if @activity.metro_station %>
 	      <tr>
 		<th><span>Метро</span></th>
-		<td><%= image_tag @activity.metro_station.metro_branch.icon.url %><%= @activity.metro_station.title %><br />
+		<td><%#= image_tag @activity.metro_station.metro_branch.icon.url %><%= @activity.metro_station.title %><br />
 	      </tr>
 	    <% end %>
 	    <tr>
