--- a/app/views/contest_memberships/_vote_count.html.erb
+++ b/app/views/contest_memberships/_vote_count.html.erb
@@ -1,1 +1,3 @@
-<span data-vote="<%= memb.votes.count %>" id="vote-count"><%= t(:vote, count: memb.votes.count) %></span>
+<span data-vote="<%= membership.votes.count %>" id="vote-count">
+  <%= t(:vote, count: membership.votes.count) %>
+</span>
