--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -33,9 +33,12 @@
 
 	<div class="rating_block">
 	  <span class="name">Рейтинг родителей</span>
-	  <!-- OPTIMIZE: bad bad bad..bbr -->
-	  <div class="rating" data-rating="<%= @activity.users_rating %>" data-activity-id="<%= @activity.id %>" data-lock=<%= !can?(:vote, @activity) %> data-already-vote=<%= current_user ? current_user.already_vote?(@activity) : false  %>>Звезды</div>
-	  <%= render partial: 'vote_count' %><br />
+    <div class="rating"
+         data-rating="<%= @activity.users_rating %>"
+         data-activity-id="<%= @activity.id %>"
+         data-lock=<%= not can?(:vote, @activity) %>
+         data-already-vote=<%= current_user and current_user.already_vote?(@activity) %>>Звезды</div>
+    <%= render 'vote_count' %><br />
 	  <a href="#" class="cancel_rating <%= 'hidden' if (current_user ? !current_user.already_vote?(@activity) : true) %>">Изменить</a>
 	</div>
 	<div class="clear"></div>
