--- a/app/views/contest_memberships/_memberships_list.html.erb
+++ b/app/views/contest_memberships/_memberships_list.html.erb
@@ -6,9 +6,8 @@
       <div class="author">Автор: <%= membership.user.name %></div>
       <div class="comments_count"><%= membership.comments_count %></div>
 
-        <div class="rating" data-rating="<%= membership.rating %>" data-membership-id="<%= membership.id %>" data-lock=<%= !can?(:vote, membership) or !contest.active? %>>Звезды</div>
-        <%= render partial: 'vote_count', locals: {memb: membership } %>
-
+        <div class="rating_readonly" data-rating="<%= membership.rating %>">Звезды</div>
+        <%= render 'vote_count', membership: membership if @contest.ended? %>
     </div>
   </div>
 <% end %>
