--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,9 @@
 <div class="header_flash_wrapper">
-  <a href="/">
+  <a href="/"></a>
     <div id="flashcontent_1">
       <div class="cap"></div>
     </div>
-  </a>
+  
 </div>
 
 <div class="color_line_left">
