--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -3,11 +3,9 @@
     <div class="detail_page">
       <h1><%= @organization.title %></h1>
       <div class="cat_list">
-	<% arr = Array.new %>
-	<% @organization.activities.each do |a| a.direction_tags.each do |t| arr << t end end %>
-	<% arr.each do |tag| %>
-	  <%= link_to tag.name, activities_path(tag: tag.id) %>
-	<% end %>
+  <% @organization.direction_tags.each do |tag| %>
+    <%= link_to tag.name, activities_path(tag: tag.id, kind: tag.kind) %>
+  <% end %>
       </div>
       <div class="left_part">
 	<div class="info_block">
