--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -12,7 +12,7 @@ VK.Widgets.Like("vk_like", {type: "mini", height: 20});
 </div>
 
 <div class="soc_like_button">   
-<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbalticit.ru&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=359292310775946" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
+<iframe src="//www.facebook.com/plugins/like.php?href=<%= @fb_url %>&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=359292310775946" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 </div>    
     
 <div class="soc_like_button"> 
@@ -38,6 +38,6 @@ VK.Widgets.Like("vk_like", {type: "mini", height: 20});
 
 <div class="soc_like_button"> 
 <link href="http://stg.odnoklassniki.ru/share/odkl_share.css" rel="stylesheet">
-<a class="odkl-share-oc" href=”Замените на АБСОЛЮТНЫЙ адрес страницы" onclick="ODKL.Share(this);return false;" ><span>0</span></a>
+<a class="odkl-share-oc" href=<%= @fb_url %> onclick="ODKL.Share(this);return false;" ><span>0</span></a>
 <script src="http://stg.odnoklassniki.ru/share/odkl_share.js" type="text/javascript" ></script>
 </div>
