--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <div class="pages">
   <div class="common">
-    <h1><%= @article.title %></h1>
+    <h1><%= @article.title %> <%= favourite_block @article %></h1>
     <strong><%= @article.author.name %>. <%= Russian::strftime(@article.created_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
       <div class="thumb">
