fix label in dialog

--- a/app/views/activities/_approve_dialog.html.erb
+++ b/app/views/activities/_approve_dialog.html.erb
@@ -6,7 +6,7 @@
     </div>
     
     <div class="field">
-      <label>Ваш вопрос</label>
+      <label>Ваше мнение</label>
       <%= text_area_tag :content %>
     </div>
     
