--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -22,7 +22,7 @@
               </a>
             </div>
             <span class="name">Надежда Левашова</span>
-            <span class="info">МОСКОВСКИЙ КРЕДИТНЫЙ БАНК<br />Генеральный спонсор и организатор<br />фестиваля "Яркие люди"</span>
+            <span class="info">МОСКОВСКИЙ КРЕДИТНЫЙ БАНК</span>
           </div>
         </div>
         <div class="org_people_preview">
@@ -34,7 +34,7 @@
               </a>
             </div>
             <span class="name">Мунтян Ольга</span>
-            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"<br />организатор фестиваля "Яркие люди"</span>
+            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"</span>
             
           </div>
         </div>
@@ -47,7 +47,7 @@
               </a>
             </div>
             <span class="name">Гальперина Мария</span>
-            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"<br />организатор фестиваля "Яркие люди"</span>
+            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"</span>
             
           </div>
         </div>
