--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -104,13 +104,13 @@
 	<ul class="">
 	  <li <%= 'class=selected' if @activity_page %>><%= link_to 'Кружки и студии', activities_path %></li>
 	  <li <%= 'class=selected' if @article_page %>><%= link_to 'Яркий журнал', articles_path %></li>
-	  <li class="current <%= 'selected' if @org_komitet %>"><%= link_to 'Фестиваль', page_path('about_festival') %>
+	  <li class="current <%= 'selected' if current_page?(page_path('about_festival')) or current_page?(page_path('org_komitet')) %>"><%= link_to 'Фестиваль', page_path('about_festival') %>
 	    <div class="sub_menu">
 	      <ul>
-		<li><%= link_to "О фестивале", page_path('about_festival') %></li>
+		<li <%= 'class=selected' if current_page?(page_path('about_festival')) %>><%= link_to "О фестивале", page_path('about_festival') %></li>
 		<li><a href="">Новости фестиваля</a></li>
 		<li><a href="">Участники</a></li>
-		<li><%= link_to "Оргкомитет", page_path('org_komitet') %></li>
+		<li <%= 'class=selected' if current_page?(page_path('org_komitet')) %>><%= link_to "Оргкомитет", page_path('org_komitet') %></li>
 	      </ul>
 	    </div>
 	  </li>
