--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -20,7 +20,7 @@
         <ul>
           <% @directions.each do |tag| %>
             <li>
-              <%= check_box_tag "tag[]", tag.id, (tag.id.to_s.in? params[:tag]),
+              <%= check_box_tag "tag[]", tag.id, (params[:tag] and tag.id.to_s.in? params[:tag]),
                                 id: (dom_id tag), class: :remote_action %>
               <%= label_tag (dom_id tag), class: :hidden_checkbox do %>
 		<span class="sim_check"></span> <%= tag.name %>
