--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -76,25 +76,29 @@
       </div>
 
       <div class="right_part">
-	<div class="pikachoose">
-	  <% if @activity.photos.count == 1 %>
-	    <div class="mask"></div>
-	    <%= link_to image_tag(@activity.photos.last.attach.url(:slider)), '#' %>
-	  <% elsif  @activity.photos.count > 1 %>
-	    <div class="mask"></div>
-	    <ul id="pikame" class="jcarousel-skin-pika">
-	      <% @activity.photos.each do |photo| %>
-		<li><%= link_to image_tag(photo.attach.url(:slider)), '#' %></li>
-	      <% end %>
-	    </ul>
-	  <% end %>
-	</div>
-	<script language="javascript">
-	  $(document).ready(
-	  function (){
-	  $("#pikame").PikaChoose({carousel:true, autoPlay:false});
-	  });
-	</script>
+        <div class="pikachoose">
+        <% if @activity.photos.count == 1 %>
+          <div class="mask"></div>
+          <%= link_to image_tag(@activity.photos.last.attach.url(:slider)), '#' %>
+        <% elsif  @activity.photos.count > 1 %>
+          <div class="mask"></div>
+          <ul id="pikame" class="jcarousel-skin-pika">
+          <% @activity.photos.each do |photo| %>
+            <li><%= link_to image_tag(photo.attach.url(:slider)), '#' %></li>
+          <% end %>
+          <% @activity.videos.each do |video| %>
+            <li><%= link_to image_tag(video.preview_url), '#' %></li>
+          <% end %>
+          </ul>
+        <% end %>
+      </div>
+      
+      <script language="javascript">
+        $(document).ready(
+        function (){
+        $("#pikame").PikaChoose({carousel:true, autoPlay:false});
+        });
+      </script>
 
       </div>
       <div class="clear"></div>
