--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -1,114 +1,13 @@
-<% content_for :title do %>
-  Фестиваль Яркие Люди | Оргкомитет
-<% end %>
 <div class="pages">
-  <div class="common">
-    <div class="post_category_menu">
-      <ul>
-        <li class="about_ico"><%= link_to "О фестивале", page_path('about_festival') %></li>
-        <li class="org_ico active"><%= link_to "Оргкомитет", page_path('org_komitet') %></li>
-      </ul>
-      <div class="clear">
-      </div>
-    </div>
-    <div class="orgkomitet">
-      <div class="org_people">
-        <div class="org_people_preview">
-          <div class="org_people_wrapper">
-            <div class="thumb">
-              <a href="">
-              <span class="mask"></span>
-              <img src="/assets/org_com_face_1.jpg" width="205px" height="205px" alt="" />
-              </a>
-            </div>
-            <span class="name">Надежда Левашова</span>
-            <span class="info">МОСКОВСКИЙ КРЕДИТНЫЙ БАНК</span>
-          </div>
-        </div>
-        <div class="org_people_preview">
-          <div class="org_people_wrapper">
-            <div class="thumb">
-              <a href="">
-              <span class="mask"></span>
-              <img src="/assets/org_com_face_2.jpg" width="205px" height="205px" alt="" />
-              </a>
-            </div>
-            <span class="name">Мунтян Ольга</span>
-            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"</span>
-            
-          </div>
-        </div>
-        <div class="org_people_preview">
-          <div class="org_people_wrapper">
-            <div class="thumb">
-              <a href="">
-              <span class="mask"></span>
-              <img src="/assets/org_com_face_3.jpg" width="205px" height="205px" alt="" />
-              </a>
-            </div>
-            <span class="name">Гальперина Мария</span>
-            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"</span>
-            
-          </div>
-        </div>
-        <div class="clear">
-        </div>
-      </div>
-      
-      
-      <div class="title">
-          Оргкомитет фестиваля "Яркие люди 2012"
-      </div>
-      <div class="left_part">
-        <div class="other_people_preview">
-          <div class="thumb">
-            <a href="">
-            <span class="mask"></span>
-            <img src="/assets/org_com_face_4.jpg" width="85" height="85" alt="" />
-            </a>
-          </div>
-          <div class="info">
-            <div class="name">
-              Василиса Никифорова
-            </div>
-            PR-менеджер проекта.<br />
-            Обращаться по вопросам аккредитации журналистов.
-            <div class="contact">
-              <span class="toemail">v_nicol@bk.ru</span><br /><span class="phone">+7 906 072-04-42</span>
-            </div>
-          </div>
-        </div>
-       
-      </div>
-      <div class="right_part">
-        
-        
-        <div class="other_people_preview">
-          <div class="thumb">
-            <a href="">
-            <span class="mask"></span>
-            <img src="/assets/org_com_face_5.jpg" width="85" height="85" alt="" />
-            </a>
-          </div>
-          <div class="info">
-            <div class="name">
-              Мария Демидова
-            </div>
-            Продюсер проекта.<br />
-            Обращаться по вопросам участия в фестивале.
-            <div class="contact">
-              <span class="toemail">demidova@bright-people.ru</span><span class="phone">+7 926 884-12-27</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="clear">
-      </div>
-    </div>
-  </div>
+  <%== Page.as('org_komitet').text %>
+  <!-- NOT EDIT -->
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
   </div>
   <div class="clear">
   </div>
 </div>
+
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Оргкомитет
+<% end %>
