--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -167,7 +167,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .main_content .adv { float:right; margin-left:3%; height:250px; width:213px; border:1px solid #bb224c; text-align:center; padding-top:100px}
 
 .main_content .bank_info .to_bank_link { margin-top:23px; background:#fff; border:3px solid #bb224c; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; behavior: url(border-radius.htc); text-decoration:none; font-weight:bold; color:#bb224c; padding:1px 5px; display:inline-block}
-
+.main_content .bank_info .to_bank_link:hover { border:3px solid #21a2dc;}
 
 .main_content .subscription { behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#ebebeb; padding:20px; margin-right:250px; margin-top:-79px; height: 40px;}
 .main_content .subscription .title { font-size:20px; float:left; color:#616161; vertical-align:0; background:url(/assets/subscription_ico.png) no-repeat 0px 8px; padding-left:50px;}
@@ -219,6 +219,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .tender_last .tender_title_ico { background:url(/assets/tender_ico.png) ; display:block; height:51px; width:51px; position:absolute; left:110px; top:5px}
 .tender_last .preview_tender { margin-top:30px}
 .tender_last .preview_tender .name a { font-size:14px; font-weight:bold; color:#007ba4; text-decoration:none; line-height:1.3}
+.tender_last .preview_tender .name a:hover { text-decoration:underline;}
 .tender_last .preview_tender .thumb { behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; overflow:hidden; position:relative; margin:0px 0px 10px 0px}
 .tender_last .preview_tender .thumb img { height:100px; width:325px; border-radius:6px;}
 .tender_last .preview_tender .info { font-size:12px}
@@ -239,6 +240,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .moscow_agencies .preview_agencies { width:160px; float:left; margin-right:40px; padding-top:20px; margin-bottom:40px; }
 .moscow_agencies .preview_agencies.last { margin-right:0px;}
 .moscow_agencies .preview_agencies .name a { font-size:14px; font-weight:bold; color:#007ba4; text-decoration:none; line-height:1.3}
+.moscow_agencies .preview_agencies .name a:hover { text-decoration:underline;}
 .moscow_agencies .preview_agencies .info .thumb { behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; overflow:hidden; position:relative; margin:0px 0px 10px 0px}
 .moscow_agencies .preview_agencies .info .thumb img { height:100px; width:160px; border-radius:6px;}
 .moscow_agencies .preview_agencies .name { padding-bottom:8px; line-height:1.3}
@@ -257,6 +259,8 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .council .expert .exp_preview .info {}
 .council .expert .exp_preview .name { color:#007ba4; font-weight:bold; padding:2px 10px; text-align:center; display:block; line-height:1.3}
+.council .expert .exp_preview a { color:#007ba4; text-decoration:none;}
+.council .expert .exp_preview a:hover { text-decoration:underline;}
 
 .council .trustee { margin-left:780px; background:#ffb13b; -moz-border-radius:0 0 180px 180px; border-radius:0 0 180px 180px; -webkit-border-radius:0 0 180px 180px; -khtml-border-radius:0 0 180px 180px; behavior: url(border-radius.htc); position:relative; overflow:hidden}
 .council .trustee .title { font-family:Futura; border-bottom:1px solid #c69141; color:#7a5113; text-align:center; letter-spacing:-1px}
@@ -369,7 +373,7 @@ span.sim_check.active { background-position:0px 0px; }
 .rating_block { float:left; width:100px; height:92px; behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; background:#fcbe42; margin-right:10px; text-align:center; color:#7b571c; font-size:12px; line-height:1.3; padding-top:8px; margin-top:10px }
 .rating_block span.name { color:#7b571c; font-weight:bold;}
 .rating_block, .rating_block a { font-size:12px}
-.rating_block .rating { padding:5px;}
+.rating_block .rating { padding:5px 0px;}
 
 .rating_info_start { float:left; width:100px; height:90px; behavior: url(border-radius.htc); -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; background:#ed1f24; text-align:center; color:#7b571c; font-size:12px; line-height:1.3; padding-top:10px; margin-top:10px; color:#fff; font-family:Futura; font-size:14px; position:relative}
 .rating_info_start .arrow { position:absolute;}
@@ -723,7 +727,7 @@ qoute-class { color:#000000; font-family:Futura; font-size:20px; display:block; 
 .expert_list .exp_preview .info {}
 .expert_list .exp_preview .name { color:#007ba4; font-weight:bold; padding:2px 10px; text-align:center; display:block; line-height:1.3}
 .expert_list .exp_preview .name a { color:#007ba4; font-weight:bold; text-decoration:none}
-
+.expert_list .exp_preview .name a:hover { text-decoration:underline}
 
 
 /* SEARCH RESULT */
@@ -756,7 +760,8 @@ qoute-class { color:#000000; font-family:Futura; font-size:20px; display:block; 
 .personality_slider  .person_slide_lenta { position:absolute; z-index:100; right:-5px; top:-5px}
 .personality_slider .slides_container { width:520px; height:320px;}
 .personality_slider .slides_container .slide { height:320px; width:520px; -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; display:block; position:relative; overflow:hidden}
-.personality_slider .slides_container .info { position:absolute; bottom:0; left:0; background:url(/assets/slider_control_bg.png); padding:5px 50px 5px 10px; width:460px; color:#e7e5e5; font-size:12px}
+.personality_slider .slides_container .slide img { border-radius:10px; height:320px; width:520px;}
+.personality_slider .slides_container .info { border-radius:0 0 10px 10px; position:absolute; bottom:0; left:0; background:url(/assets/slider_control_bg.png); padding:5px 50px 5px 10px; width:460px; color:#e7e5e5; font-size:12px}
 .personality_slider .slides_container .info .name { color:#fff; font-weight:bold }
 
 .personality_slider .slides_container .info .short_desc { overflow:hidden; height:38px;}
