--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,7 +1,7 @@
 <div class="pages">
   <div class="search_title">
     <h1>Результаты поиска</h1>
-    <span>Мы нашли <%= @results.total_entries %> упоминаний "<%= @request %>" на нашем сайте</span>
+    <span>Мы нашли <%= @results.total_entries %> упоминаний "<%= params[:q] %>" на нашем сайте</span>
   </div>
   
   <div class="common">
