--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="create">
           Разработано в <a href="http://www.balticit.ru/">BalticIT</a><br />
-          Дизайн – <a href="">Веркс</a>
+          Дизайн – <a href="http://cargocollective.com/clicheist">Веркс</a>
         </div>
       </div>
       <div class="right column">
