--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -61,7 +61,7 @@
 	    </tr>
 	    <tr>
 	      <th><span>Адрес</span></th>
-	      <td><%= y_link(@activity.coords, @activity.address) %></td>
+	      <td><div class="activ_address"><%= y_link(@activity.coords, @activity.address) %></div></td>
 	    </tr>
 	    <tr>
 	      <th><span>Сайт</span></th>
