--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -49,28 +49,36 @@
 
 	<div class="info_block">
 	  <table>
-	    <% if @activity.metro_station %>
+	    <% unless @activity.metro_station.blank? %>
 	      <tr>
-		<th><span>Метро</span></th>
-		<td><%#= image_tag @activity.metro_station.metro_branch.icon.url %><%= @activity.metro_station.title %><br />
+		    <th><span>Метро</span></th>
+		    <td><%#= image_tag @activity.metro_station.metro_branch.icon.url %><%= @activity.metro_station.title %><br />
 	      </tr>
 	    <% end %>
+      <% unless @activity.region.title.blank? %>
 	    <tr>
-	      <th><span></span></th>
+	      <th><span>Округ</span></th>
 	      <td><%= @activity.region.title %><br />
 	    </tr>
+      <% end %>
+      <% unless @activity.address.blank? %>
 	    <tr>
 	      <th><span>Адрес</span></th>
 	      <td><%= y_link(@activity.coords, @activity.address) %></td>
 	    </tr>
+      <% end %>
+      <% unless @activity.site.blank? %>
 	    <tr>
 	      <th><span>Сайт</span></th>
 	      <td ><div class="activ_site"><a href=<%= @activity.site %> target="_blank" ><span class="mask"></span><%= @activity.site %></a></div></td>
 	    </tr>
+      <% end %>
+      <% unless @activity.phone.blank? %>
 	    <tr>
 	      <th><span>Телефон</span></th>
 	      <td><%= @activity.phone %></td>
 	    </tr>
+      <% end %>
 	  </table>
 	</div>
       </div>
