--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -84,23 +84,24 @@
           <div class="mask"></div>
           <ul id="pikame" class="jcarousel-skin-pika">
           <% @activity.photos.each do |photo| %>
-            <li><%= link_to image_tag(photo.attach.url(:slider)), '#' %></li>
+            <li><%= link_to image_tag(photo.attach.url(:slider), 'data-hook-class' => "photo#{photo.id}") %></li>
           <% end %>
           <% @activity.videos.each do |video| %>
-            <li><%= link_to image_tag(video.preview_url), '#' %></li>
+            <li class="slideshow_video_item"><%= link_to image_tag(video.preview_url, 'data-hook-class' => "video#{video.id}") %></li>
           <% end %>
           </ul>
         <% end %>
+        </div>
+        <div id="lightbox_hook" class="hidden">
+          <% @activity.photos.each do |photo| %>
+            <%= link_to '#', photo.attach.url(:original), class: "photo#{photo.id}", rel: "prettyPhoto[activity]" %>
+          <% end %>
+          <% @activity.videos.each do |video| %>
+            <%= link_to '#', video.url, class: "video#{video.id}", rel: "prettyPhoto[activity]" %>
+          <% end %>
+        </div>
       </div>
       
-      <script language="javascript">
-        $(document).ready(
-        function (){
-        $("#pikame").PikaChoose({carousel:true, autoPlay:false});
-        });
-      </script>
-
-      </div>
       <div class="clear"></div>
 
       <div class="title_block">О кружке</div>
