--- a/app/views/favourites/_contest_membership_item.html.erb
+++ b/app/views/favourites/_contest_membership_item.html.erb
@@ -1,6 +1,6 @@
 <div class="profile_magazine" data-id="<%= object.id %>" data-type="ContestMembership">
   <div class="info">
-    <%= link_to "delete", favourite, method: :delete, confirm: "You sure?", :class => "close" %>
+    <%= link_to "delete", favourite, method: :delete, confirm: "Вы уверены?", :class => "close" %>
     <div class="thumb">
       <%= link_to image_tag(object.picture), contest_membership_path(object.contest, object) %>
     </div>
