--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -12,10 +12,14 @@
         <% if expert.approvals_count != 0 %>
         <span class="mark"><%= expert.approvals_count %></span>
         <% end %>
+        
+        <%= link_to expert_path(expert) do %>
         <div class="thumb">
-          <%= link_to image_tag(expert.avatar), expert_path(expert) %>
+          <%= image_tag(expert.avatar) %>
         </div>
-        <span class="name"><%= link_to expert.name, expert_path(expert) %></span>
+        <span class="name"><%= expert.name %></span>
+        <% end %>
+        
         <span class="info"><%= expert.description %></span>
       </div>
     <% end %>
