--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -46,7 +46,7 @@
 		  <span class="flag">Одобрено экспертом</span>
 		<% end %>
 		<div class="name"><%= link_to activity.title, activity %></div>
-		Детям  <%= activity.age%> лет
+		Детям  <%= activity.age_range %> лет
 		<br>
 		<div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
 	      </div>
