--- a/app/views/activities/_m_educational.html.erb
+++ b/app/views/activities/_m_educational.html.erb
@@ -13,7 +13,7 @@
           <%= link_to activity.title, activity_path(activity) %>
         </div>
         <div class="short_desc">
-        Детям <%= activity.age %> лет<br />
+        Детям <%= activity.age_range %> лет<br />
         <span class="domik">Учреждение</span> <%= link_to activity.organization.title, activity.organization %>
         </div>
         
@@ -46,7 +46,7 @@
           <%= link_to activity.title, activity_path(activity) %>
         </div>
         <div class="short_desc">
-        Детям <%= activity.age %> лет<br />
+        Детям <%= activity.age_range %> лет<br />
         <span class="domik">Учреждение</span> <%= link_to activity.organization.title, activity.organization %>
         </div>
         <div class="rating_readonly" data-rating="<%= activity.users_rating %>"></div>
