--- a/app/views/activities/_preview_catalog_item.html.erb
+++ b/app/views/activities/_preview_catalog_item.html.erb
@@ -15,7 +15,7 @@
       <%= link_to activity.title, activity %>
     </div>
 
-    Детям <%= activity.age %> лет
+    Детям <%= activity.age_range %> лет
     <br />
 
     <% if activity.organization %>
