--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -5,14 +5,14 @@
       <div class="cell" style="width:120px">
         <strong>По возрасту</strong>
         <ul>
-          <% AgeTag.all.each do |age_tag| %>
-            <li>
-              <%= check_box_tag "age[]", age_tag.id, false, id: (dom_id age_tag), class: :remote_action %>
-              <%= label_tag (dom_id age_tag), age_tag.title, class: :hidden_checkbox do %>
-		<span class="sim_check"></span> <%= age_tag.title %>
+	  <% search_ages.each do |age| %>
+	    <li>
+	      <%= check_box_tag "age[]", age[1], false, id: "age_#{age[1]}", class: :remote_action %>
+              <%= label_tag "age_#{age[1]}", class: :hidden_checkbox do %>
+		<span class="sim_check"></span> <%= age[0] %>
 	      <% end %>
-            </li>
-          <% end %>
+	    </li>
+	  <% end %>
         </ul>
       </div>
       <div class="cell" style="width:200px">
