--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,6 +9,10 @@
           <span>дарит городу праздник<br />
 в честь своего 20-летия</span>
         </div>
+	<br /><br /><br />
+	<div class="create">
+	  Генеральная лицензия Банка России No. 1978 от 20 января 2000 г.
+	</div>
 
       </div>
       <div class="center column">
