--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,9 @@
         </div>
 
 	<div class="create license">
-	  Генеральная лицензия Банка России No. 1978 от 20 января 2000 г.
+	  ОАО «МОСКОВСКИЙ КРЕДИТНЫЙ БАНК»<br />
+	  Генеральная лицензия Банка России<br />
+	  No. 1978 от 20 января 2000 г.
 	</div>
 
       </div>
